Added sorting by category for resume-list template